# localaicoder

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  default.env  main.py  main_simple.py  pyproject.toml  run.sh  test_simple.py
src/: __init__.py
src/agents/: __init__.py  agent_roles.py  multi_agent_coder.py
src/cli/: __init__.py  advanced_cli.py
src/providers/: __init__.py  base.py  huggingface.py  ollama.py
src/tools/: __init__.py  command_tools.py  file_tools.py
src/utils/: __init__.py  device_detection.py  model_management.py
