[project]
name = "localaicoder"
version = "0.1.0"
description = "This is an Ai assistant pro programmers and coders."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.5.1",
    "python-dotenv>=1.1.1",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
]
